--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,55 @@
-fastapi==0.61.1
-pydantic==1.6.1
-uvicorn==0.11.8
+appdirs==1.4.4
+asyncio==3.4.3
+attrs==20.3.0
+autobahn==21.3.1
+Automat==20.2.0
+bcrypt==3.2.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+constantly==15.1.0
+cryptography==3.4.6
+dateparser==1.0.0
+DateTime==4.3
+distlib==0.3.1
+dnspython==2.1.0
+email-validator==1.1.2
+export==0.1.2
+fastapi==0.63.0
+filelock==3.0.12
+h11==0.12.0
+hyperlink==21.0.0
+idna==2.10
+incremental==21.3.0
 motor==2.2.0
-pydantic[email]
-python-decouple
-email-validator
+passlib==1.7.4
+pipenv==2020.11.15
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydantic==1.8.1
 PyJWT==1.7.1
-passlib
-bcrypt
+pymongo==3.11.3
+pyOpenSSL==20.0.1
+python-binance==0.7.9
+python-dateutil==2.8.1
+python-decouple==3.4
+pytz==2021.1
+regex==2020.11.13
+requests==2.25.1
+service-identity==18.1.0
+six==1.15.0
+starlette==0.13.6
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
+txaio==21.2.1
+typing-extensions==3.7.4.3
+tzlocal==2.1
+ujson==4.0.2
+urllib3==1.26.3
+uvicorn==0.13.4
+virtualenv==20.4.2
+virtualenv-clone==0.5.4
+websockets==8.1
+zope.interface==5.2.0
