--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,15 +52,15 @@ jobs:
       #   run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
         run: |
-          cd ./venv/lib/site-packages
-          zip -r9 ../../../api.zip .
+          cd ./venv/lib/python3.7/site-packages
+          zip -r9 ../../../../app.zip .
       - name: Add API files to Zip file
-        run: cd ./app && zip -g ../api.zip -r .
+        run: cd ./app && zip -g ../app.zip -r .
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
-          name: api
-          path: api.zip
+          name: app
+          path: app.zip
 
   CD:
     runs-on: ubuntu-latest
