--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,18 +75,18 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      - name: Download Lambda api.zip
+      - name: Download Lambda app.zip
         uses: actions/download-artifact@v2
         with:
-          name: api
+          name: app
       - name: Upload to S3
-        run: aws s3 cp api.zip s3://fastapi-lamda/api.zip
+        run: aws s3 cp app.zip s3://fastapi-lamda/app.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       - name: Deploy new Lambda
-        run: aws lambda update-function-code --function-name fastapi --s3-bucket fastapi-lamda --s3-key api.zip
+        run: aws lambda update-function-code --function-name fastapi --s3-bucket fastapi-lamda --s3-key app.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
