--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,14 +53,14 @@ jobs:
       - name: Create archive of dependencies
         run: |
           cd ./venv/lib/python3.7/site-packages
-          zip -r9 ../../../../app.zip .
+          zip -r9 ../../../../api.zip .
       - name: Add API files to Zip file
-        run: cd ./app && zip -g ../app.zip -r .
+        run: cd ./app && zip -g ../api.zip -r ./app
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
-          name: app
-          path: app.zip
+          name: api
+          path: api.zip
 
   CD:
     runs-on: ubuntu-latest
@@ -75,18 +75,18 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      - name: Download Lambda app.zip
+      - name: Download Lambda api.zip
         uses: actions/download-artifact@v2
         with:
-          name: app
+          name: api
       - name: Upload to S3
-        run: aws s3 cp app.zip s3://fastapi-lamda/app.zip
+        run: aws s3 cp api.zip s3://fastapi-lamda/api.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       - name: Deploy new Lambda
-        run: aws lambda update-function-code --function-name fastapi --s3-bucket fastapi-lamda --s3-key app.zip
+        run: aws lambda update-function-code --function-name fastapi --s3-bucket fastapi-lamda --s3-key api.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
