--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,10 @@ jobs:
         run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
         if: steps.cache-venv.outputs.cache-hit != 'true'
 
-      # - name: Run Tests   
-      #   # Note that you have to activate the virtualenv in every step
-      #   # because GitHub actions doesn't preserve the environment   
-      #   run: . venv/bin/activate && pytest
+      - name: Run Tests   
+        # Note that you have to activate the virtualenv in every step
+        # because GitHub actions doesn't preserve the environment   
+        run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
         run: |
           cd ./venv/lib/python3.7/site-packages
