--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,8 @@ jobs:
       #   run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
         run: |
-          cd ./venv/lib/site-packages
-          zip -r9 ../../../api.zip .
+          cd ./venv/lib/python3.8.11/site-packages
+          zip -r9 ../../../../api.zip .
       - name: Add API files to Zip file
         run: cd ./app && zip -g ../api.zip -r .
       - name: Upload zip file artifact
