--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         # This action sets up a Python environment for use in actions
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.7
           # optional: architecture: x64 x64 or x86. Defaults to x64 if not specified
 
       # Step-2 Install Python Virtual ENV
@@ -46,17 +46,16 @@ jobs:
         run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
         if: steps.cache-venv.outputs.cache-hit != 'true'
 
-        
-      # - name: Run Tests   
-      #   # Note that you have to activate the virtualenv in every step
-      #   # because GitHub actions doesn't preserve the environment   
-      #   run: . venv/bin/activate && pytest
+      - name: Run Tests   
+        # Note that you have to activate the virtualenv in every step
+        # because GitHub actions doesn't preserve the environment   
+        run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
         run: |
-          cd ./venv/lib/python3.8.11/site-packages
+          cd ./venv/lib/python3.7/site-packages
           zip -r9 ../../../../api.zip .
       - name: Add API files to Zip file
-        run: cd ./app && zip -g ../api.zip -r .
+        run: cd ./api && zip -g ../api.zip -r .
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
