--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,24 @@
-aiohttp==3.7.4.post0
-appdirs==1.4.4
+asgiref==3.4.1
+atomicwrites==1.4.0
 attrs==21.2.0
-autobahn==21.2.1
-Automat==20.2.0
-bcrypt==3.2.0
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-constantly==15.1.0
-cryptography==3.4.7
-dateparser==1.0.0
-DateTime==4.3
-distlib==0.3.1
-dnspython==2.1.0
-email-validator==1.1.2
-export==0.1.2
-fastapi==0.65.1
-filelock==3.0.12
+certifi==2021.5.30
+charset-normalizer==2.0.4
+click==8.0.1
+colorama==0.4.4
+fastapi==0.68.0
 h11==0.12.0
-hyperlink==21.0.0
-idna==2.10
-idna-ssl==1.1.0
-importlib-metadata==4.3.1
-importlib-resources==5.1.4
-incremental==21.3.0
-motor==2.4.0
-multidict==5.1.0
-passlib==1.7.4
-pipenv==2021.5.29
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydantic==1.8.2
-PyJWT==1.7.1
-pymongo==3.11.4
-pyOpenSSL==20.0.1
+idna==3.2
+iniconfig==1.1.1
 mangum==0.12.1
+packaging==21.0
+pluggy==0.13.1
+py==1.10.0
+pydantic==1.8.2
+pyparsing==2.4.7
 pytest==6.2.4
-python-binance==1.0.10
-python-dateutil==2.8.1
-python-decouple==3.4
-pytz==2021.1
-regex==2021.4.4
-requests==2.25.1
-semantic-version==2.8.5
-setuptools-rust==0.12.1
-six==1.16.0
+requests==2.26.0
 starlette==0.14.2
 toml==0.10.2
-txaio==21.2.1
 typing-extensions==3.10.0.0
-tzlocal==2.1
-ujson==4.0.2
-urllib3==1.26.5
-uvicorn==0.13.4
-virtualenv==20.4.7
-virtualenv-clone==0.5.4
-websockets==9.1
-yarl==1.6.3
-zipp==3.4.1
-zope.interface==5.4.0
+urllib3==1.26.6
+uvicorn==0.14.0
